logs/ushcn_run_228559.err
Traceback (most recent call last):
  File "/home/solgi/srptpatch/run_models.py", line 18, in <module>
    from lib.parse_datasets import parse_datasets
  File "/home/solgi/srptpatch/lib/parse_datasets.py", line 94
    elif dataset_name == "ushcn":
                                 ^
IndentationError: unindent does not match any outer indentation level
